fix: [PL-30366]: Text overlap fix in Project selector (#14369)

--- a/src/modules/45-projects-orgs/pages/projects/views/ProjectListView/ProjectListView.module.scss
+++ b/src/modules/45-projects-orgs/pages/projects/views/ProjectListView/ProjectListView.module.scss
@@ -14,14 +14,16 @@
   height: 26px;
   display: inline-block;
   border-radius: var(--spacing-xsmall);
+  flex-shrink: 0;
 }
 
 .layout {
   justify-content: flex-end;
 }
 
-.verticalCenter {
+.projectTextContainer {
   justify-content: center;
+  flex: 1 !important;
 }
 
 .project {
